2010-09-28  Murray Cumming  <murrayc@murrayc.com>

	Fix the build of the demos (and they even run).

	* gtk/src/gtk_signals.defs: Regenerated.
	* gtk/src/widget.hg: Added get_allocated_width()/height().
  * gtk/src/container.hg: Comment out propagate_expose() because of GTK+
  bug #630800.
	* demos/gtk-demo/example_drawingarea.cc:
	* demos/gtk-demo/example_pixbufs.cc:
	* demos/pixbuf-demo.cc: Change the expose_event handlers to
  draw handlers.

2010-09-28  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with the latest GTK+ from git master.

	* gtk/gtkmm/private/object_p.h: Add this back for now, to avoid making
  more changes to the Gtk::Object code.
  * gtk/gtkmm/object.[h|cc]: Comment out the code that uses
  gtk_object_destroy(), adding TODO comments. If we don't find a way to
  do this in GTK+ 3 then we may need to remove our Gtk::Object and require
  Gtk::CellRenderer and Gtk::TreeViewColumn to be used via RefPtr.

  * gtk/src/filechooser.hg: Fix Filter->FileFilter typos.
  * gtk/src/recentchooser.hg: Use RecentFilter via RefPtr.

  * gtk/src/ruler.hg: Add a Cairo::Context parameter to the vfuncs.
  * gtk/src/widget.hg: Remove input_shape_combine_mask() and
  shape_combine_mask(). Correct some vfunc parameters.
  * gtk/src/gtk_vfuncs.defs:
  * tools/m4/convert_gtk.m4: Make necessary corrections.

  * gtk/src/image.hg: Remove get_pixmap() because Gdk::Pixmap is gone.
  * gtk/src/scale.hg: Remove set/get_bg_pixmap().

  * gtk/src/scale.ccg, scrollbar.ccg: Fix typos.
  * gtk/src/viewport.hg, scrolledwindow.hg: Remove duplicate method
  declarations.

2010-09-27  Murray Cumming  <murrayc@murrayc.com>

  Partly fixed the build with latest GTK+.

	* gdk/src/gdk_methods.defs:
  * gtk/src/gtk_methods.defs: Regenerated with h2defs.py.

	* gdk/src/bitmap.[hg|ccg]:
	* gdk/src/colormap.[hg|ccg]:
	* gdk/src/pixmap.[hg|ccg]: Removed, because these were removed from GTK+.

	* gtk/src/cellsizerequest.[hg|ccg]: