@@ -1,5 +1,12 @@
 2010-09-28  Murray Cumming  <murrayc@murrayc.com>
 
+	Object: Use g_object_run_dispose() as a gtk_object_destroy() replacement.
+
+	* gtk/gtkmm/object.cc: This does the same thing so it should work as well.
+  Matthias Clasen and Owen Taylor suggested it.
+
+2010-09-28  Murray Cumming  <murrayc@murrayc.com>
+
 	Fix the build of the demos (and they even run).
 
 	* gtk/src/gtk_signals.defs: Regenerated.
